[tool.poetry]
name = "ylz-utils"
version = "0.1.45"
description = "ylz 工具类"
authors = ["youht88"]
readme = "README.md"

[[tool.poetry.packages]]
include = "ylz_utils"

[tool.poetry.scripts]
ylz_utils = "ylz_utils.cli.main:run"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.17"
langchain-together = "^0.1.4"
langchain-google-genai = "^1.0.8"
pyyaml = "^6.0.1"
langgraph = "^0.1.11"
langserve = "^0.2.2"
duckduckgo-search = "^6.2.1"
sqlite4 = "^0.1.1"
faiss-cpu = "^1.8.0.post1"
playwright = "^1.45.1"
argparse = "^1.4.0"
qianfan = "^0.4.2"
gradio-client = "^1.1.1"
typing-extensions = "^4.12.2"
annotated-types = "^0.7.0"
pydantic-core = "^2.20.1"
h11 = "^0.14.0"
langchain-core = "^0.2.23"
distro = "^1.9.0"
huggingface-hub = "^0.24.1"
fastapi = "^0.111.1"
langchain-ollama = "^0.1.0"
sse-starlette = "^2.1.2"
langchain = {extras = ["all"], version = "^0.2.11"}
unstructured = "^0.15.0"
pdfminer = "^20191125"
docx2txt = "^0.8"
websockets = "11.0"
python-pptx = "^0.6.23"
markdownify = "^0.13.1"
langchain-experimental = "^0.0.63"
gradio-tools = "^0.0.9"
wolframalpha = "^5.1.3"
pdfplumber = "^0.11.2"
python-docx = "^1.1.2"
pillow-heif = "^0.18.0"
matplotlib = "^3.9.0"
unstructured-inference = "^0.7.36"

langchain-huggingface = "^0.0.3"
yfinance = "^0.2.41"
elasticsearch-dsl = "^8.14.0"
langchain-elasticsearch = "^0.2.2"

#torch = { version = "2.0.0", extras = ["cpu"] }
torch = "2.2.0"

elastic-transport = "^8.15.0"
dashscope = "^1.20.4"
ipfs-toolkit = "^0.5.24"
langchain-chroma = "^0.1.3"
neo4j = "^5.23.1"
jionlp = "^1.5.15"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#[[tool.poetry.source]]
#name = "tsinghua"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
#priority = "primary"
