[tool.poetry]
name = "ylz-utils"
version = "0.3.26"
description = "ylz 工具类"
authors = ["youht88"]
readme = "README.md"

[[tool.poetry.packages]]
include = "ylz_utils"

[tool.poetry.scripts]
ylz_utils = "ylz_utils.cli.main:run"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
argparse = "^1.4.0"
python-dotenv = "^1.0.1"
rich = "^13.8.1"
mpmath = "^1.3.0"
grandalf = "^0.8"
requests = "^2.32.3"

langchain = "^0.3.0"
#langchain = {extras = ["all"], version = "^0.2.11"}
langchain-community = "*"
langgraph-checkpoint = "1.0.9"
langserve = "*"
langgraph-cli = "^0.1.52"
langchain-experimental = "*"

langchain-openai = "*"
langchain-together = "*"
#langchain-google-genai = "^1.0.8"
#langchain-huggingface = "^0.0.3"
langchain-ollama = "*"
qianfan = "^0.4.2"
dashscope = "^1.20.4"

#langchain-chroma = "*"
langchain-elasticsearch = "*"

duckduckgo-search = "^6.2.1"
sqlite4 = "^0.1.1"
playwright = "^1.45.1"
gradio-client = "^1.1.1"
typing-extensions = "^4.12.2"
annotated-types = "^0.7.0"
pydantic-core = "^2.20.1"
h11 = "^0.14.0"
distro = "^1.9.0"
fastapi = "^0.111.1"
sse-starlette = "^2.1.2"
pdfminer = "^20191125"
docx2txt = "^0.8"
websockets = "11.0"
python-pptx = "^0.6.23"
markdownify = "^0.13.1"
gradio-tools = "^0.0.9"
wolframalpha = "^5.1.3"
pdfplumber = "^0.11.2"
python-docx = "^1.1.2"
pillow-heif = "^0.18.0"
matplotlib = "^3.9.0"

#huggingface-hub = "^0.24.1"
#unstructured-inference = "^0.7.36"
#unstructured = "^0.15.0"
#torch = { version = "2.0.0", extras = ["cpu"] }
#torch = "2.2.0"

akshare = "^1.15.22"

ipfs-toolkit = "^0.5.24"
neo4j = "^5.23.1"
jionlp = "^1.5.15"
aiosqlite = "^0.20.0"

elasticsearch-dsl = "^8.15.2"
elastic-transport = "^8.15.0"
opentelemetry-sdk = "^1.27.0"
serpapi = "^0.1.5"
google-search-results = "^2.4.2"
langgraph = "^0.2.28"
tabulate = "^0.9.0"
trustcall = "^0.0.22"
apscheduler = "^3.10.4"
fastapi-cdn-host = "^0.8.2"
torch = "2.2.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"
